retorno
C:\Users\rodri\Downloads\TesteTela\TesteTela.ino: In function 'bool buscarClima()':
TesteTela:197:32: error: 'ArduinoJson::V743JB11::detail::MemberProxy< <template-parameter-1-1>, <template-parameter-1-2> >::MemberProxy(const ArduinoJson::V743JB11::detail::MemberProxy< <template-parameter-1-1>, <template-parameter-1-2> >&) [with TUpstream = ArduinoJson::V743JB11::JsonDocument&; AdaptedString = ArduinoJson::V743JB11::detail::RamString]' is private within this context
   auto daily = docClima["daily"];
                                ^
In file included from C:\Users\rodri\OneDrive\Documentos\Arduino\libraries\ArduinoJson\src/ArduinoJson/Object/JsonObject.hpp:8:0,
                 from C:\Users\rodri\OneDrive\Documentos\Arduino\libraries\ArduinoJson\src/ArduinoJson.hpp:39,
                 from C:\Users\rodri\OneDrive\Documentos\Arduino\libraries\ArduinoJson\src/ArduinoJson.h:9,
                 from C:\Users\rodri\Downloads\TesteTela\TesteTela.ino:11:
C:\Users\rodri\OneDrive\Documentos\Arduino\libraries\ArduinoJson\src/ArduinoJson/Object/MemberProxy.hpp:50:3: note: declared private here
   MemberProxy(const MemberProxy& src) // Error here? See https://arduinojson.org/v7/proxy-non-copyable/
   ^~~~~~~~~~~
exit status 1
'ArduinoJson::V743JB11::detail::MemberProxy< <template-parameter-1-1>, <template-parameter-1-2> >::MemberProxy(const ArduinoJson::V743JB11::detail::MemberProxy< <template-parameter-1-1>, <template-parameter-1-2> >&) [with TUpstream = ArduinoJson::V743JB11::JsonDocument&; AdaptedString = ArduinoJson::V743JB11::detail::RamString]' is private within this context
